<resources>
    <string name="app_name">demo01</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bn1">测试按钮1</string>
    <string name="bn2">测试按钮2</string>
    <string name="bn3">bn3</string>
    <string name="bn4">bn4</string>
    <string name="bn5">bn5</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>